[package]
name = "bustub-rs"
version = "0.1.0"
authors = ["accelsao <bebe8277@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
tokio = { version = "0.2", features = ["full"] }
